tests/sksl/errors/golden/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: array must have a size
error: 2: expected 'int', but found 'float'
error: 3: expected 'int', but found 'bool'
error: 5: array must have a size
4 errors
